--- a/app/src/main/res/layout/item_life_list.xml
+++ b/app/src/main/res/layout/item_life_list.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:theme="@style/AppTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_gravity="center">
-    <TextView
-            android:id="@+id/tv_life_title"
-            android:layout_width="190dp"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            tools:ignore="SpUsage"
-            android:textSize="21dp"
-            android:text="@string/guide_life_list_name"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
+    android:layout_marginStart="40dp"
+    android:layout_marginBottom="5dp"
+    android:padding="5dp"
+    android:theme="@style/AppTheme">
 
     <TextView
-            android:id="@+id/tv_life_data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:ignore="SpUsage"
-            android:textSize="21dp"
-            android:text="@string/guide_life_list_data"/>
+        android:id="@+id/tv_life_title"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="@string/guide_life_list_name"
+        android:textSize="21dp"
+        tools:ignore="SpUsage" />
+
+    <TextView
+        android:id="@+id/tv_life_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/guide_life_list_data"
+        android:textSize="21dp"
+        tools:ignore="SpUsage" />
 </LinearLayout>
