combine loading progressbar

--- a/app/src/main/res/layout/widget_weather_error.xml
+++ b/app/src/main/res/layout/widget_weather_error.xml
@@ -1,41 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:id="@+id/lo_widget_error_info"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/lo_widget_error_info"
+    <TextView
+        android:id="@+id/tv_widget_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:text="@string/info_widget_data_load_error"
+        android:textColor="@color/colorWhite"
+        android:textSize="20dp"
+        tools:ignore="SpUsage" />
 
-        <TextView
-            android:id="@+id/tv_widget_error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/info_widget_data_load_error"
-            android:textColor="@color/colorWhite"
-            android:textSize="20dp"
-            tools:ignore="SpUsage" />
-
-        <ImageView
-            android:id="@+id/iv_error_refresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:src="@drawable/baseline_refresh_white_36"
-            tools:ignore="ContentDescription" />
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/pb_widget"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+    <ImageView
+        android:id="@+id/iv_error_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminateDrawable="@drawable/rotate_progress" />
-</FrameLayout>
+        android:layout_marginTop="5dp"
+        android:src="@drawable/baseline_refresh_white_36"
+        tools:ignore="ContentDescription" />
+</LinearLayout>
