--- a/app/src/main/res/layout/widget_weather_simple.xml
+++ b/app/src/main/res/layout/widget_weather_simple.xml
@@ -1,93 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lo_widget_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/lo_widget_container"
+        android:id="@+id/lo_widget_weather_info"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/lo_widget_weather_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_widget_tpr"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/guide_on_time_tpr"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="48dp"
-                    android:textStyle="bold"
-                    tools:ignore="SpUsage" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginStart="2dp"
-                    android:text="@string/symbol_celsius"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="44dp"
-                    android:textStyle="bold"
-                    tools:ignore="SpUsage" />
-            </LinearLayout>
-
-            <ImageView
-                android:id="@+id/iv_widget_sky"
-                android:layout_width="81dp"
-                android:layout_height="81dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="15dp"
-                tools:ignore="ContentDescription" />
-
-            <TextView
-                android:id="@+id/tv_widget_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawableTop="@drawable/baseline_location_on_white_18"
-                android:gravity="center"
-                android:text="@string/guide_place_name"
-                android:textColor="@color/colorWhite"
-                android:textSize="18dp"
-                tools:ignore="SpUsage" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_widget_update_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:drawableEnd="@drawable/baseline_refresh_white_18"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_widget_tpr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/guide_on_time_tpr"
+                android:textColor="@color/colorWhite"
+                android:textSize="48dp"
+                android:textStyle="bold"
+                tools:ignore="SpUsage" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="2dp"
+                android:text="@string/symbol_celsius"
+                android:textColor="@color/colorWhite"
+                android:textSize="44dp"
+                android:textStyle="bold"
+                tools:ignore="SpUsage" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_widget_sky"
+            android:layout_width="81dp"
+            android:layout_height="81dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tv_widget_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableTop="@drawable/baseline_location_on_white_18"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:text="@string/guide_update_time"
+            android:text="@string/guide_place_name"
             android:textColor="@color/colorWhite"
-            android:textSize="15dp"
+            android:textSize="18dp"
             tools:ignore="SpUsage" />
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/pb_widget"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <TextView
+        android:id="@+id/tv_widget_update_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminateDrawable="@drawable/rotate_progress" />
-</FrameLayout>
+        android:drawableEnd="@drawable/baseline_refresh_white_18"
+        android:gravity="center"
+        android:paddingBottom="5dp"
+        android:text="@string/guide_update_time"
+        android:textColor="@color/colorWhite"
+        android:textSize="15dp"
+        tools:ignore="SpUsage" />
+</LinearLayout>
