--- a/app/src/main/res/layout/widget_weather_simple.xml
+++ b/app/src/main/res/layout/widget_weather_simple.xml
@@ -51,6 +51,13 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
             tools:ignore="ContentDescription" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lo_widget_refresh_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_widget_address"
@@ -63,18 +70,18 @@
             android:textColor="@color/colorWhite"
             android:textSize="18dp"
             tools:ignore="SpUsage" />
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_widget_update_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:drawableEnd="@drawable/baseline_refresh_white_18"
-        android:gravity="center"
-        android:paddingBottom="5dp"
-        android:text="@string/guide_update_time"
-        android:textColor="@color/colorWhite"
-        android:textSize="15dp"
-        tools:ignore="SpUsage" />
+        <TextView
+            android:id="@+id/tv_widget_update_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableEnd="@drawable/baseline_refresh_white_18"
+            android:gravity="center"
+            android:paddingBottom="5dp"
+            android:text="@string/guide_update_time"
+            android:textColor="@color/colorWhite"
+            android:textSize="15dp"
+            tools:ignore="SpUsage" />
+    </LinearLayout>
 </LinearLayout>
