--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">newsky2.kma.go.kr</domain>
+        <domain includeSubdomains="true">apis.data.go.kr</domain>
         <domain includeSubdomains="true">openapi.airkorea.or.kr</domain>
-        <domain includeSubdomains="true">www.juso.go.kr</domain>
         <domain includeSubdomains="true">openapi.epost.go.kr</domain>
     </domain-config>
 </network-security-config>
