--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -16,4 +16,10 @@
         android:icon="@drawable/baseline_settings_white_24"
         android:title="@string/settings"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/action_info"
+        android:icon="@drawable/baseline_info_24"
+        android:title="@string/information"
+        app:showAsAction="ifRoom"/>
 </menu>
